build/resources/test/errors/P2/public/forloop02.mavl
function void main(){
    var int i;
    // missing ref
    i = 0;
    for (counter = 0; counter < 10; counter = counter + 1) {
        i = i + 1;
    }
}
